veil-tests/src/compile_tests/fail/redact_variant_on_struct.rs
fn main() {}

#[derive(veil::Redact)]
#[redact(all, variant)]
struct Foo {
    #[redact]
    bar: String,
}
