veil-tests/src/compile_tests/fail/redact_variant_on_struct.stderr
error: `#[redact(variant, ...)]` is invalid for structs
 --> src/compile_tests/fail/redact_variant_on_struct.rs:4:1
  |
4 | #[redact(all, variant)]
  | ^^^^^^^^^^^^^^^^^^^^^^^
